<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="@drawable/background_gradient">
    <LinearLayout
	   android:layout_width="fill_parent"
	   android:layout_height="wrap_content"
	   android:padding="10dp"
	   android:orientation="horizontal"
	   android:background="@drawable/background_gradient">
	   <ImageView
	      android:id="@+id/view_gesture_icon"
	      android:layout_width="wrap_content"
	      android:layout_height="wrap_content"
	      android:layout_gravity="center_vertical"
	      android:src="@drawable/vf_icon"/>
	   <TextView
	      android:layout_width="wrap_content"
	      android:layout_height="wrap_content"
	      android:layout_gravity="center_vertical"
	      android:textAppearance="@style/TextMediumBold"
	      android:padding="10dp"
	      android:text="@string/settings_title"/>
    </LinearLayout>

      <!-- TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginRight="6dip"
          android:text="@string/settings_title"
          android:paddingTop="10dp"
          android:paddingBottom="10dp"
          android:textAppearance="@style/TextLargeBold" /-->
      <TextView 
	      android:text="@string/settings_description"
	      android:textAppearance="@style/TextMedium"
	      android:paddingTop="20dp"
	      android:paddingBottom="10dp"
	      android:paddingLeft="10dp"
	      android:paddingRight="10dp"
	      android:layout_width="fill_parent" 
		  android:layout_height="wrap_content"/> 
      <TextView
          android:layout_width="fill_parent"
    	  android:layout_height="1dp"
    	  android:layout_margin="10dp"
    	  android:background="@color/pinned_header_background">   		
      </TextView>
      <LinearLayout
          android:layout_width="fill_parent"
	      android:layout_height="wrap_content"
	      android:layout_marginTop="10dp"
	      android:padding="10dp"
	      android:orientation="horizontal">
		  <TextView
		    android:layout_width="wrap_content"
    	    android:layout_height="wrap_content"
		    android:text="@string/settings_color_text"
    	    android:textAppearance="@style/TextMedium"
             />
          <Button
            android:layout_width="60dp"
    	    android:layout_height="32dp"
 			android:onClick="showSettings"
 			android:id="@+id/settings_btn_color"
            android:layout_marginLeft="16dip"/>
      </LinearLayout>
    <TextView
        android:layout_width="fill_parent"
    	android:layout_height="1dp"
    	android:layout_margin="10dp"
    	android:background="@color/pinned_header_background"/>   		
      
      <LinearLayout 
		    android:orientation="vertical"
		    android:padding="10dp"
		    android:layout_marginTop="20dp"
		    android:layout_width="fill_parent"
		    android:layout_height="fill_parent">   		

		    <TextView 
		       	android:layout_width="fill_parent"
		        android:layout_height="wrap_content" 
		        android:textAppearance="@style/TextMedium"
		        android:text="@string/settings_accuracy_text"/>
		    <TextView android:id="@+id/text_left"
    		    android:layout_marginTop="14dp"
		       	android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:gravity="left"
		        android:text="@string/settings_accuracy_text_less"
		        android:textAppearance="@style/TextMedium"/>
		    <SeekBar android:id="@+id/seek"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:progressDrawable="@drawable/seekbar_progress"
		        android:max="100"/>
		    <TextView android:id="@+id/text_right"
		       	android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:gravity="right"
		        android:text="@string/settings_accuracy_text_more"
		        android:textAppearance="@style/TextMedium"/>
		</LinearLayout>
      
</LinearLayout>