<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
	    xmlns:android="http://schemas.android.com/apk/res/android"
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent"
	    android:divider="@color/base_gray"
	    android:background="@drawable/background_gradient">
	    <include android:id="@+id/gestureslist_buttons"
        	layout="@layout/menu_block"/>
	    
		<LinearLayout
	       android:id="@+id/gestureslist_allbuttons"
	       android:layout_width="fill_parent"
	       android:layout_height="64dp"
	       android:layout_below="@id/gestureslist_buttons"
	       android:orientation="horizontal">
	       <ToggleButton
	           android:id="@+id/tab_all"
	           android:layout_width="fill_parent"
	           android:layout_height="fill_parent"
	           android:background="@drawable/tab_left_selector"
	           android:textAppearance="@style/TextMediumBold"
	           android:textOn="@string/tab_all_gestures"
	           android:textOff="@string/tab_all_gestures"
	           android:layout_weight="1"
			   android:gravity="center"
			   android:layout_gravity="left"/>
	       <View
	          android:layout_width="1dp"
	          android:layout_height="fill_parent"
	          android:background="@drawable/tabbar_separator"/>
	       <ToggleButton
	           android:id="@+id/tab_contacts"
	           android:layout_width="fill_parent"
	           android:layout_height="fill_parent"
	           android:background="@drawable/tab_middle_selector"
	           android:textAppearance="@style/TextMediumBold"
	           android:textOff="@string/tab_contacts"
	           android:textOn="@string/tab_contacts"
	           android:layout_weight="1"
			   android:gravity="center"
			   android:layout_gravity="left"/>
	       <View
	          android:layout_width="1dp"
	          android:layout_height="fill_parent"
	          android:background="@drawable/tabbar_separator"/>
	       <ToggleButton
	           android:id="@+id/tab_apps"
	           android:layout_width="fill_parent"
	           android:layout_height="fill_parent"
	           android:background="@drawable/tab_middle_selector"
	           android:textAppearance="@style/TextMediumBold"
	           android:textOn="@string/tab_installed_apps"
	           android:textOff="@string/tab_installed_apps"
	           android:layout_weight="1"
	           android:gravity="center"
			   android:layout_gravity="left"/>
	       <View
	          android:layout_width="1dp"
	          android:layout_height="fill_parent"
	          android:background="@drawable/tabbar_separator"/>
	       <ToggleButton
	           android:id="@+id/tab_url"
	           android:layout_width="fill_parent"
	           android:layout_height="fill_parent"
	           android:background="@drawable/tab_right_selector"
	           android:textAppearance="@style/TextMediumBold"
	           android:textOff="@string/tab_urls"
	           android:textOn="@string/tab_urls"
	           android:layout_weight="1"
	           android:gravity="center"
			   android:layout_gravity="left"/>
	   	</LinearLayout>
		<LinearLayout
		    android:id="@+id/gestureslist_footer"
		    android:layout_width="fill_parent"
		    android:layout_height="46dp"
		    android:layout_marginTop="16dp"
		    android:layout_marginBottom="22dp"
		    android:layout_marginLeft="8dp"
		    android:layout_marginRight="8dp"		    
		    android:layout_alignParentBottom="true"
			android:background="@drawable/btn_light_grey_selector"
		    android:orientation="horizontal"
		    android:gravity="right"
		    android:clickable="true"
		    android:focusable="true">
		    
			<TextView
		        android:text="@string/button_add_new_gesture"
				android:layout_height="fill_parent"
				android:layout_width="wrap_content"
				android:layout_marginLeft="10dp"
				android:textAppearance="@style/TextMediumBold"
			    android:gravity="center_vertical">
			</TextView>
			<ImageView
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:layout_gravity="center_vertical"
			    android:layout_marginLeft="50dp"
			    android:layout_marginRight="2dp"
			    android:src="@drawable/icon_plus"
			    >
			</ImageView>
   		</LinearLayout>

	    <ListView
	      android:layout_width="fill_parent"
	      android:layout_height="wrap_content"
		  android:cacheColorHint="#FFFFFFFF"
	      
	      android:layout_below="@id/gestureslist_allbuttons"
	      android:layout_above="@id/gestureslist_footer"
	      android:id="@android:id/list">
	    </ListView>
    
</RelativeLayout>
