<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background_gradient">

    <LinearLayout
	   android:layout_width="fill_parent"
	   android:layout_height="wrap_content"
	   android:id="@+id/create_gesture_top_bar"
	   android:layout_alignParentTop="true"
	   android:layout_marginBottom="20dp"
	   android:background="@color/base_gray"
	   android:orientation="vertical">
	   <include android:id="@+id/contact_header"
	       	layout="@layout/contact_header"/>
    </LinearLayout> 	
    <LinearLayout
        android:layout_width="fill_parent"
        android:id="@+id/create_gesture_buttons"
        android:layout_alignParentBottom="true"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:orientation="horizontal">
        <Button
            android:id="@+id/done"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:enabled="false"
            android:onClick="addGesture"
            android:background="@drawable/btn_light_grey_selector"
            android:text="@string/button_save" />
        <Button
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="cancelGesture"
            android:background="@drawable/btn_light_grey_selector"
            android:text="@string/button_cancel" />
    
    </LinearLayout>
    
    <com.vodafone.gesty.ui.custom.MyGestureOverlay
        android:id="@+id/gestures_overlay"
        android:background="@drawable/drawing_area"
        android:layout_below="@id/create_gesture_top_bar"
        
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_gravity="center"
        android:gestureStrokeType="multiple" />
    <LinearLayout
		    android:layout_width="wrap_content"
		    android:layout_height="46dp"
		    android:orientation="horizontal"
		    android:layout_alignBottom="@id/gestures_overlay"
		    android:layout_alignLeft="@id/gestures_overlay"
		    android:layout_marginLeft="14dp"
		    android:layout_marginBottom="10dp"
		    android:onClick="clearGesture"
		    android:clickable="true"
		    android:focusable="true">
			<ImageView
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:layout_gravity="center_vertical"
			    android:src="@drawable/icon_gesty">
			</ImageView>
			<TextView
				android:text="@string/button_retry"
				android:layout_height="fill_parent"
				android:layout_width="wrap_content"
				android:textAppearance="@style/TextMedium"
			    android:gravity="center_vertical">
			</TextView>
   		</LinearLayout>
    
</RelativeLayout>
