<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
  android:orientation="vertical"
  android:padding="10dp"
  android:background="@drawable/background_gradient">
  <LinearLayout
	   android:layout_width="fill_parent"
	   android:layout_height="wrap_content"
	   android:id="@+id/top_panel"
       android:layout_alignParentTop="true"
	   android:layout_marginBottom="24dp"
	   android:orientation="horizontal">
	   <ImageView
	      android:layout_width="wrap_content"
	      android:layout_height="wrap_content"
	      android:layout_gravity="center_vertical"
	      android:src="@drawable/icon_url_big"/>
	  	<RelativeLayout
		    android:id="@+id/url_button"
		    android:layout_width="fill_parent"
		    android:layout_height="46dp"
		    android:layout_marginTop="16dp"
		    android:layout_marginLeft="8dp"
		    android:layout_marginRight="8dp"		    
			android:background="@drawable/btn_light_grey_selector"
		    android:orientation="horizontal"
		    android:onClick="clickUrl"
		    android:clickable="true"
		    android:focusable="true">
			<TextView
				android:id="@+id/url_textview"
				android:text="http://"
				android:layout_height="fill_parent"
				android:layout_width="wrap_content"
				android:layout_marginLeft="10dp"
				android:textAppearance="@style/TextMediumBold"
				android:layout_alignParentLeft="true"
			    android:gravity="center_vertical">
			</TextView>
			<ImageView
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:layout_gravity="center_vertical"
			    android:layout_marginLeft="50dp"
			    android:layout_marginRight="2dp"
			    android:layout_alignParentRight="true"
			    android:src="@drawable/icon_has_gesture">
			</ImageView>
   		</RelativeLayout>
  </LinearLayout>
  <LinearLayout
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:id="@+id/buttons_panel"
      android:layout_alignParentBottom="true"
      android:orientation="horizontal">
      <Button
          android:id="@+id/input_url_next"
          android:layout_width="fill_parent"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:enabled="false"
          android:background="@drawable/btn_light_grey_selector"
          android:text="@string/button_save" />
      <Button
          android:id="@+id/input_url_cancel"
          android:layout_width="fill_parent"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:background="@drawable/btn_light_grey_selector"
          android:text="@string/button_cancel" />    
    </LinearLayout>
    <com.vodafone.gesty.ui.custom.MyGestureOverlay
        android:id="@+id/gestures_overlay"
        android:background="@drawable/drawing_area"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_gravity="center"
        android:layout_below="@id/top_panel"
        android:gestureStrokeType="multiple" />
    	<LinearLayout
		    android:layout_width="wrap_content"
		    android:layout_height="46dp"
		    android:orientation="horizontal"
		    android:layout_alignBottom="@id/gestures_overlay"
		    android:layout_alignLeft="@id/gestures_overlay"
		    android:layout_marginLeft="14dp"
		    android:layout_marginBottom="10dp"
		    android:onClick="clearGesture"
		    android:clickable="true"
		    android:focusable="true">
			<ImageView
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:layout_gravity="center_vertical"
			    android:src="@drawable/icon_gesty">
			</ImageView>
			<TextView
				android:text="@string/button_retry"
				android:layout_height="fill_parent"
				android:layout_width="wrap_content"
				android:textAppearance="@style/TextMedium"
			    android:gravity="center_vertical">
			</TextView>
   		</LinearLayout>     
</RelativeLayout>